reference/dotnet/PhiSql/Generated/PhiSQLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from spec/v1.0/grammar/PhiSQL.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Philterd.PhiSql.Generated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class PhiSQLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, POLICY=14, DESCRIPTION=15, CONFIGURE=16, 
		CRYPTO=17, FPE=18, KEY=19, TWEAK=20, FROM=21, ENV=22, SPLITTING=23, PDF=24, 
		POSTFILTERS=25, ANALYSIS=26, GRAPHICAL=27, BOX=28, REDACT=29, DEIDENTIFY=30, 
		IGNORE=31, TERMS=32, PATTERN=33, FOR=34, WITH=35, WHERE=36, AS=37, AND=38, 
		OR=39, CONFIDENCE=40, DEFINE=41, MATCHING=42, GROUP=43, CASE=44, SENSITIVE=45, 
		INSENSITIVE=46, DICTIONARY=47, SECTION=48, START=49, END=50, FUZZY=51, 
		SENSITIVITY=52, CAPITALIZED=53, OPTIONS=54, DETECT=55, PHEYE=56, LABELS=57, 
		ENDPOINT=58, FIND=59, PII=60, DISCOVER=61, ENTITIES=62, SCAN=63, IN=64, 
		SELECT=65, BY=66, LIMIT=67, COUNT=68, AVG=69, SUM=70, MIN=71, MAX=72, 
		IDENTIFIER_KW=73, MASK=74, ENCRYPT=75, FPE_ENCRYPT=76, HASH_SHA256=77, 
		RANDOM_REPLACE=78, STATIC_REPLACE=79, LAST_4=80, TRUNCATE_TO_YEAR=81, 
		TRUNCATE=82, SHIFT=83, RELATIVE=84, ABBREVIATE=85, BOOLEAN_LITERAL=86, 
		ID=87, STRING_LITERAL=88, NUMERIC_LITERAL=89, LINE_COMMENT=90, BLOCK_COMMENT=91, 
		WS=92;
	public const int
		RULE_document = 0, RULE_statement = 1, RULE_policyDecl = 2, RULE_configureStmt = 3, 
		RULE_settingList = 4, RULE_setting = 5, RULE_settingKey = 6, RULE_settingValue = 7, 
		RULE_objectValue = 8, RULE_arrayValue = 9, RULE_optionsClause = 10, RULE_redactStmt = 11, 
		RULE_deidentifyStmt = 12, RULE_entityAssignment = 13, RULE_ignoreStmt = 14, 
		RULE_defineIdentifierStmt = 15, RULE_defineDictionaryStmt = 16, RULE_defineSectionStmt = 17, 
		RULE_detectStmt = 18, RULE_discoveryStmt = 19, RULE_inClause = 20, RULE_whereDiscovery = 21, 
		RULE_discoveryPredicate = 22, RULE_projectionList = 23, RULE_projection = 24, 
		RULE_aggregate = 25, RULE_aggArg = 26, RULE_columnRef = 27, RULE_findingsRef = 28, 
		RULE_groupByClause = 29, RULE_limitClause = 30, RULE_entityList = 31, 
		RULE_entityType = 32, RULE_strategyExpr = 33, RULE_strategyName = 34, 
		RULE_strategyArgs = 35, RULE_namedArg = 36, RULE_predicate = 37, RULE_compareOp = 38, 
		RULE_stringList = 39, RULE_literal = 40;
	public static readonly string[] ruleNames = {
		"document", "statement", "policyDecl", "configureStmt", "settingList", 
		"setting", "settingKey", "settingValue", "objectValue", "arrayValue", 
		"optionsClause", "redactStmt", "deidentifyStmt", "entityAssignment", "ignoreStmt", 
		"defineIdentifierStmt", "defineDictionaryStmt", "defineSectionStmt", "detectStmt", 
		"discoveryStmt", "inClause", "whereDiscovery", "discoveryPredicate", "projectionList", 
		"projection", "aggregate", "aggArg", "columnRef", "findingsRef", "groupByClause", 
		"limitClause", "entityList", "entityType", "strategyExpr", "strategyName", 
		"strategyArgs", "namedArg", "predicate", "compareOp", "stringList", "literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'('", "')'", "','", "'='", "'['", "']'", "'*'", "'.'", "'>'", 
		"'>='", "'<'", "'<='", "'POLICY'", "'DESCRIPTION'", "'CONFIGURE'", "'CRYPTO'", 
		"'FPE'", "'KEY'", "'TWEAK'", "'FROM'", "'ENV'", "'SPLITTING'", "'PDF'", 
		"'POSTFILTERS'", "'ANALYSIS'", "'GRAPHICAL'", "'BOX'", "'REDACT'", "'DEIDENTIFY'", 
		"'IGNORE'", "'TERMS'", "'PATTERN'", "'FOR'", "'WITH'", "'WHERE'", "'AS'", 
		"'AND'", "'OR'", "'CONFIDENCE'", "'DEFINE'", "'MATCHING'", "'GROUP'", 
		"'CASE'", "'SENSITIVE'", "'INSENSITIVE'", "'DICTIONARY'", "'SECTION'", 
		"'START'", "'END'", "'FUZZY'", "'SENSITIVITY'", "'CAPITALIZED'", "'OPTIONS'", 
		"'DETECT'", "'PHEYE'", "'LABELS'", "'ENDPOINT'", "'FIND'", "'PII'", "'DISCOVER'", 
		"'ENTITIES'", "'SCAN'", "'IN'", "'SELECT'", "'BY'", "'LIMIT'", "'COUNT'", 
		"'AVG'", "'SUM'", "'MIN'", "'MAX'", "'IDENTIFIER'", "'MASK'", "'ENCRYPT'", 
		"'FPE_ENCRYPT'", "'HASH_SHA256'", "'RANDOM_REPLACE'", "'STATIC_REPLACE'", 
		"'LAST_4'", "'TRUNCATE_TO_YEAR'", "'TRUNCATE'", "'SHIFT'", "'RELATIVE'", 
		"'ABBREVIATE'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "POLICY", "DESCRIPTION", "CONFIGURE", "CRYPTO", "FPE", "KEY", 
		"TWEAK", "FROM", "ENV", "SPLITTING", "PDF", "POSTFILTERS", "ANALYSIS", 
		"GRAPHICAL", "BOX", "REDACT", "DEIDENTIFY", "IGNORE", "TERMS", "PATTERN", 
		"FOR", "WITH", "WHERE", "AS", "AND", "OR", "CONFIDENCE", "DEFINE", "MATCHING", 
		"GROUP", "CASE", "SENSITIVE", "INSENSITIVE", "DICTIONARY", "SECTION", 
		"START", "END", "FUZZY", "SENSITIVITY", "CAPITALIZED", "OPTIONS", "DETECT", 
		"PHEYE", "LABELS", "ENDPOINT", "FIND", "PII", "DISCOVER", "ENTITIES", 
		"SCAN", "IN", "SELECT", "BY", "LIMIT", "COUNT", "AVG", "SUM", "MIN", "MAX", 
		"IDENTIFIER_KW", "MASK", "ENCRYPT", "FPE_ENCRYPT", "HASH_SHA256", "RANDOM_REPLACE", 
		"STATIC_REPLACE", "LAST_4", "TRUNCATE_TO_YEAR", "TRUNCATE", "SHIFT", "RELATIVE", 
		"ABBREVIATE", "BOOLEAN_LITERAL", "ID", "STRING_LITERAL", "NUMERIC_LITERAL", 
		"LINE_COMMENT", "BLOCK_COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "PhiSQL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static PhiSQLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PhiSQLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PhiSQLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DocumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(PhiSQLParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_document; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhiSQLListener typedListener = listener as IPhiSQLListener;
			if (typedListener != null) typedListener.EnterDocument(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhiSQLListener typedListener = listener as IPhiSQLListener;
			if (typedListener != null) typedListener.ExitDocument(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhiSQLVisitor<TResult> typedVisitor = visitor as IPhiSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDocument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DocumentContext document() {
		DocumentContext _localctx = new DocumentContext(Context, State);
		EnterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (((((_la - 14)) & ~0x3f) == 0 && ((1L << (_la - 14)) & 2992870785253381L) != 0)) {
				{
				{
				State = 82;
				statement();
				State = 83;
				Match(T__0);
				}
				}
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 90;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PolicyDeclContext policyDecl() {
			return GetRuleContext<PolicyDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConfigureStmtContext configureStmt() {
			return GetRuleContext<ConfigureStmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RedactStmtContext redactStmt() {
			return GetRuleContext<RedactStmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeidentifyStmtContext deidentifyStmt() {
			return GetRuleContext<DeidentifyStmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IgnoreStmtContext ignoreStmt() {
			return GetRuleContext<IgnoreStmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefineIdentifierStmtContext defineIdentifierStmt() {
			return GetRuleContext<DefineIdentifierStmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefineDictionaryStmtContext defineDictionaryStmt() {
			return GetRuleContext<DefineDictionaryStmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefineSectionStmtContext defineSectionStmt() {
			return GetRuleContext<DefineSectionStmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DetectStmtContext detectStmt() {
			return GetRuleContext<DetectStmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DiscoveryStmtContext discoveryStmt() {
			return GetRuleContext<DiscoveryStmtContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhiSQLListener typedListener = listener as IPhiSQLListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhiSQLListener typedListener = listener as IPhiSQLListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhiSQLVisitor<TResult> typedVisitor = visitor as IPhiSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 102;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 92;
				policyDecl();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93;
				configureStmt();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 94;
				redactStmt();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 95;
				deidentifyStmt();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 96;
				ignoreStmt();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 97;
				defineIdentifierStmt();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 98;
				defineDictionaryStmt();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 99;
				defineSectionStmt();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 100;
				detectStmt();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 101;
				discoveryStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PolicyDeclContext : ParserRuleContext {
		public IToken policyName;
		public IToken description;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode POLICY() { return GetToken(PhiSQLParser.POLICY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(PhiSQLParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DESCRIPTION() { return GetToken(PhiSQLParser.DESCRIPTION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL() { return GetToken(PhiSQLParser.STRING_LITERAL, 0); }
		public PolicyDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_policyDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPhiSQLListener typedListener = listener as IPhiSQLListener;
			if (typedListener != null) typedListener.EnterPolicyDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPhiSQLListener typedListener = listener as IPhiSQLListener;
			if (typedListener != null) typedListener.ExitPolicyDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPhiSQLVisitor<TResult> typedVisitor = visitor as IPhiSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPolicyDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PolicyDeclContext policyDecl() {
		PolicyDeclContext _localctx = new PolicyDeclContext(Context, State);
		EnterRule(_localctx, 4, RULE_policyDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			Match(POLICY);
			State = 105;
			_localctx.policyName = Match(ID);
			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==DESCRIPTION) {
				{
				State = 106;
				Match(DESCRIPTION);
				State = 107;
				_localctx.description = Match(STRING_LITERAL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
